# building-permit

./: .geminiignore  .gitignore  AGENTS.md  Makefile  README.md  generate_fake_pdf.py
.agents/skills/assessor-mcp-server/: SKILL.md
.agents/skills/building-reviewer/: SKILL.md
.agents/skills/submit/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml
agent/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  contractor_agent.py  main.py  model_armor.py  pyproject.toml  services.py  telemetry.py  test_main.py
agent-engine/: Makefile  README.md  pyproject.toml
agent-engine/app/: agent.py  agent_engine_app.py
agent-engine/app/app_utils/: deploy.py
agent/.cloudbuild/: deploy.yaml
api/: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  coverage.out  database.go  go.mod  go.sum  handlers.go  main.go  main_test.go  models.go
api/.cloudbuild/: deploy.yaml
api/internal/database/: database.go  go.mod
api/internal/handlers/: go.mod  go.sum  handlers.go  registry.go
api/internal/models/: go.mod  models.go
api/internal/telemetry/: go.mod  go.sum  telemetry.go
api/pkg/telemetry/: telemetry.go
assessor-mcp-server/: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  assessor.db  db.py  main.py  pyproject.toml  telemetry.py  test_main.py  test_network.py
assessor-mcp-server/.cloudbuild/: deploy.yaml
contractor-agent/: .dockerignore  .gcloudignore  Dockerfile  Makefile  README.md  agent.py  main.py  pyproject.toml  test_main.py
contractor-agent/.cloudbuild/: deploy.yaml
frontend/: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/.cloudbuild/: deploy.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx  store.ts  telemetry.ts
frontend/src/components/: BottomNav.tsx  Dashboard.tsx  DocumentCenter.tsx  Login.tsx  NewPermit.tsx  PermitDetail.tsx  Profile.tsx
infra/: Makefile  README.md  model_armor_setup.py  rag_setup.py  setup.py  setup.sh  setup_model_armor.py  template.json
k8s/: agent-deployment.yaml  agent-service.yaml  agent.yaml  api-deployment.yaml  api-service.yaml  api.yaml  configmap.yaml  deploy_gke.sh  frontend-deployment.yaml  frontend-service.yaml  frontend.yaml  namespace.yaml
model-armor/: template.json
plan/: DESIGN.md  spec.md
tests/: generate_fake_pdf.py  liability_trap_plan.py  malicious_kitchen_plan.py  tool_manipulation_plan.py
