[project]
name = "building-permit-assessor-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for building permit assessment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "sse-starlette>=3.3.3",
    "starlette>=1.0.0",
    "uvicorn>=0.42.0",
]
