[project]
name = "building-permit-assessor-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for building permit assessment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "google-auth>=2.49.1",
    "grpcio>=1.78.0",
    "mcp>=1.26.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-mcp>=0.53.3",
    "opentelemetry-resourcedetector-gcp>=1.11.0a0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sse-starlette>=3.3.3",
    "starlette>=1.0.0",
    "uvicorn>=0.42.0",
]
